<resources>
    <string name="app_name" translatable="false">Run Tracker</string>
    <string name="permission_denied" translatable="false">Location permission required</string>
    <string name="start">Старт</string>
    <string name="restart">Рестарт</string>
    <string name="save">Сохранить</string>
    <string name="discharge">Сброс</string>
    <string name="stop">Стоп</string>
    <string name="exit">Выход</string>
    <string name="title_top" translatable="false">Top fragment</string>
    <string name="distance_tab">Растояние</string>
    <string name="history_tab">История</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="saved">Сохранено!</string>
    <string name="title">Заголовок</string>
    <string name="jogging">Пробежка_</string>
    <string name="meters" translatable="false">0 m</string>
    <string name="times">Время</string>
    <string name="disc">Описание</string>
    <string name="note">Заметка</string>
    <string name="about">О приложении</string>
    <string name="about_message"> Особенности:
         \n- доступно наиболее точное отслеживание расстояния/времени
         \n- работает GPS
         \n- журнал запусков: история запусков </string>
    <string name="year" translatable="false">(c)2021</string>
    <string name="mail" translatable="false">dgioto@gmail.com</string>
    <string name="version">Версия:</string>
    <string name="version_message" translatable="false">1.0.0</string>
    <string name="turn_on_gps">Включите GPS!</string>
    <string name="gps">GPS выключен</string>
    <string name="notification">Отслеживание вашей тренировки</string>
    <string name="night_theme">Ночной режим</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="location">Доступ к местоположению</string>
    <string name="location_message">Приложению Run Tracker необходим доступ к данным
        о местоположении устройства, чтобы приложение могло отслеживать пройденное растояние
        и маршрут в активном и фоновом режимах. Без этого приложение будет работать не коректно.
        Вы можете изменить это разрешение в настройках устройства</string>
    <string name="runtracker_privacypolicy" translatable="false">dgioto.github.io/runtracker_privacypolicy</string>
    <string name="close">Закрыть</string>


</resources>