<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="0,0 м"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="time"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="34sp" />

            <Button
                android:id="@+id/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="60dp"
                android:onClick="onClickStart"
                android:text="@string/start"
                android:textSize="24sp" />

            <Button
                android:id="@+id/stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="60dp"
                android:onClick="onClickStop"
                android:text="@string/stop"
                android:textSize="24sp" />

            <Button
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="60dp"
                android:onClick="onClickReset"
                android:text="@string/reset"
                android:textSize="24sp" />

            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="60dp"
                android:onClick="onClickExit"
                android:text="@string/exit"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>